Toggle X-Ray tool tip listed as "Undocumented operator" #76285

Closed
opened 2020-05-01 04:04:26 +02:00 by Alaska · 4 comments
Member

System Information
Operating system: Linux 5.3.0 Ubuntu based system
Graphics card: GTX 1050ti 440.82

Blender Version
Broken: 2.82a release, 2.83 7a809a7504de (2020-04-30 22:07), 2.90 4d790516fbf8 (2020-04-30 22:03)

Short description of error:
The tool tip for "Toggle X-Ray" is "Undocumented operator".
Screenshot from 2020-05-01 14-03-39.png

**System Information** Operating system: Linux 5.3.0 Ubuntu based system Graphics card: GTX 1050ti 440.82 **Blender Version** Broken: 2.82a release, 2.83 7a809a7504de (2020-04-30 22:07), 2.90 4d790516fbf8 (2020-04-30 22:03) **Short description of error:** The tool tip for "Toggle X-Ray" is "Undocumented operator". ![Screenshot from 2020-05-01 14-03-39.png](https://archive.blender.org/developer/F8504891/Screenshot_from_2020-05-01_14-03-39.png)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by blender/blender@542ff416e2

This issue was referenced by blender/blender@542ff416e274aa1a7663e1bc2a7c29dabe072dff
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Aaron Carlisle self-assigned this 2020-05-11 23:02:48 +02:00
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-manual#76285
No description provided.