Fix T76285: Missing 'Toggle X-Ray' operator description

Author: @Alaska

Differential Revision: https://developer.blender.org/D7591